--- a/solutions/Django_labs/lab5/blogapp/templates/blogapp/base.html
+++ b/solutions/Django_labs/lab5/blogapp/templates/blogapp/base.html
@@ -48,7 +48,8 @@
                     <a href="{% url 'blogapp:index' %}">Home</a> |
                     <a href="{% url 'blogapp:register' %}">Register</a> |
                     <a href="{% url 'blogapp:login' %}">Login</a> |
-                    <a href="{% url 'blogapp:profile' %}">Profile</a>            
+                    <a href="{% url 'blogapp:profile' %}">Profile</a> |
+                    <a href="{% url 'blogapp:create' %}">Create Post</a>            
                 </div>
     
 
